[package]
name = "costx"
version = "0.1.0"
edition = "2021"
description = "Blockchain transaction analysis tools for EVM chains and Solana"
license = "MIT"
repository = "https://github.com/mayan-finance/costx"
keywords = ["blockchain", "ethereum", "solana", "transaction", "analysis"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[lib]
name = "costx"
path = "src/lib.rs"

[[bin]]
name = "costx"
path = "src/main.rs"

[[example]]
name = "usage"
path = "examples/usage.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ethers = "2.0"
hex = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
futures = "0.3"
solana-client = "2.3.3"
solana-sdk = "2.3.1"
solana-transaction-status = "2.3.3"
solana-account-decoder = "2.3.3"
base64 = "0.22.1"
clap = { version = "4.0", features = ["derive", "env"] }
dotenvy = "0.15"
